--- a/src/app/pages/consumers/request/payment/payment.component.html
+++ b/src/app/pages/consumers/request/payment/payment.component.html
@@ -40,7 +40,7 @@
                                     Ověřovací korunová platba
                                 </h2>
                                 <p>
-                                    Na doručení této ověřovací platby čekáme do 8.8.1344, proto ji odešlete raději hned teď. Platba u nás může být během chvíle, ale z některé banky to může trvat až 3 dny a&nbsp;my vás nechceme zdržovat.
+                                    Na doručení této ověřovací platby čekáme do {{paymentInfo.dueDate | date:'d.&nbsp;M.&nbsp;y'}}, proto ji odešlete raději hned teď. Platba u nás může být během chvíle, ale z některé banky to může trvat až 3 dny a&nbsp;my vás nechceme zdržovat.</p><p>Okno aplikace můžete nyní zavřít a až platbu obdržíme, dáme vám vědět na e-mail.
                                 </p>
                             </div>
                             <div class="page-box__inner page-box__inner--light">
