--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -1,13 +1,24 @@
 <ng-template #fileUploaderTemplate>
-    <p class="mb-1 text-body">
-        Nechcete nic vyplňovat?<br />
-        Přetáhněte sem nebo nahrejte vaši poslední fakturu za elektřinu nebo plyn a o zbytek se postaráme my.<br />
+    <div class="mb-1 text-body">
+        <p>
+            Nechcete nic vyplňovat?
+        </p>
+        <p>
+            Přetáhněte sem nebo nahrejte vaši poslední fakturu za elektřinu nebo plyn a o zbytek se postaráme my.
+        </p>
+        <p class="mb-1">
+            Do tří pracovních dnů můžete očekávat:
+        </p>
+        <div>Vytvoříme Vám odběrné místo</div>
+        <div>Nabídky pošleme na Váš e-mail</div>
+        <div>Z nabídek si stačí vybrat</div>
+        <div class="mb-3">Odběrné místo budete mít v sekci Rozpracované</div>
         <ng-container>
             <label [for]="idFileUploader" class="drop-zone__control btn btn-primary mt-2 mb-4">
                 Nahrát fakturu
             </label>
         </ng-container>
-    </p>
+    </div>
     <p class="mb-0 text-body small">
         Formáty: PDF, JPG, PNG, TIFF do velikosti 10 MB.
     </p>
