--- a/src/app/pages/public/landing/landing.component.html
+++ b/src/app/pages/public/landing/landing.component.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <div #help class="section section--light-gray">
+    <div #help id="s-cim-vam-pomuzeme" class="section section--light-gray">
         <div class="container-fluid container-fluid--max-width">
             <h2 class="h4--public text-secondary text-center text-xl-left">S čím vám pomůžeme</h2>
             <div class="card-tiles">
@@ -85,7 +85,7 @@
             </div>
         </div>
     </div>
-    <div #howItWorks class="section section--bg-two-half section--gradient-violet-right-half">
+    <div #howItWorks id="jak-to-funguje" class="section section--bg-two-half section--gradient-violet-right-half">
         <div class="container-fluid container-fluid--max-width">
             <div class="row no-gutters">
                 <div class="col-xl-6">
@@ -132,7 +132,7 @@
             </div>
         </div>
     </div>
-    <div #bestPricesInTheWorld class="section section--light-gray">
+    <div #bestPricesInTheWorld id="vice-o-cenach" class="section section--light-gray">
         <div class="container-fluid container-fluid--max-width">
             <div class="row no-gutters">
                 <div class="col-md-8 offset-md-2 col-xl-6 offset-xl-0">
@@ -212,7 +212,7 @@
             </div>
         </div>
     </div>
-    <div #blog class="section section-blog">
+    <div #blog id="blog" class="section section-blog">
         <div class="container-fluid container-fluid--max-width">
             <h2 class="h2--public text-md-center">Blog</h2>
             <div class="row px-3">
@@ -239,7 +239,7 @@
             </div>
         </div>
     </div>
-    <div #faq class="section section-help">
+    <div #faq id="faq" class="section section-help">
         <div class="container-fluid container-fluid--max-width">
             <div class="row px-3">
                 <div class="col-xl-8 offset-xl-2 mb-3 text-md-center">
