--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -10,7 +10,7 @@
             Do tří pracovních dnů můžete očekávat:
         </p>
         <div>Vytvoříme Vám odběrné místo</div>
-        <div>Nabídky pošleme na Váš e-mail</div>
+        <div>Nabídky pošleme na váš e-mail</div>
         <div>Z nabídek si stačí vybrat</div>
         <div class="mb-3">Odběrné místo budete mít v sekci Rozpracované</div>
         <ng-container>
