--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -39,6 +39,12 @@
 				background-color: $font-text;
 			}
 		}
+
+		&.no-bullets > li {
+			&::before {
+				content: none;
+			}
+		}
 	}
 
 	ol {
