--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -13,8 +13,8 @@
             <li>Vytvoříme Vám odběrné místo</li>
             <li>Nabídky pošleme na váš e-mail</li>
             <li>Z nabídek si stačí vybrat</li>
+            <li class="mb-3">Odběrné místo budete mít v sekci Rozpracované</li>
         </ul>
-        <div class="mb-3">Odběrné místo budete mít v sekci Rozpracované</div>
         <label [for]="idFileUploader" class="cursor-pointer drop-zone__control btn btn-primary mt-2 mb-4">
             Nahrát fakturu
         </label>
