--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -10,10 +10,10 @@
             Do tří pracovních dnů můžete očekávat:
         </p>
         <ul class="no-bullets">
-            <li>Vytvoříme Vám odběrné místo</li>
-            <li>Nabídky pošleme na váš e-mail</li>
-            <li>Z nabídek si stačí vybrat</li>
-            <li class="mb-3">Odběrné místo budete mít v sekci Rozpracované</li>
+            <li>vytvoříme Vám odběrné místo,</li>
+            <li>nabídky pošleme na váš e-mail,</li>
+            <li>z nabídek si stačí vybrat,</li>
+            <li class="mb-3">odběrné místo budete mít v sekci Rozpracované.</li>
         </ul>
         <label [for]="idFileUploader" class="cursor-pointer drop-zone__control btn btn-primary mt-2 mb-4">
             Nahrát fakturu
