--- a/src/common/ui/forms/select/select.component.html
+++ b/src/common/ui/forms/select/select.component.html
@@ -45,10 +45,8 @@
                     let-item="item"
                     let-index="index"
                     let-search="searchTerm">
-                <ng-container *ngIf="!templateItem">
-                    <div [lndOptionHighlight]="search">
-                        {{ item.label }}
-                    </div>
+                <ng-container *ngIf="!templateItem" [lndOptionHighlight]="search">
+                    <div [innerHTML]="item.label"></div>
                 </ng-container>
                 <ng-container *ngIf="templateItem">
                     <ng-container *ngTemplateOutlet="templateItem; context: {item: item,index: index,search: search}"></ng-container>
