--- a/src/app/pages/consumers/request/payment/payment.component.html
+++ b/src/app/pages/consumers/request/payment/payment.component.html
@@ -44,7 +44,7 @@
                                 </p>
                             </div>
                             <div class="page-box__inner page-box__inner--light page-box__inner--same-height px-md-3">
-                                <div class="row justify-content-center">
+                                <div class="row justify-content-center no-gutters">
                                     <div class="col-12 d-none d-md-block">
                                         <table class="table-basic mx-auto">
                                             <tbody>
