--- a/src/app/pages/consumers/request/signboard/signboard.component.html
+++ b/src/app/pages/consumers/request/signboard/signboard.component.html
@@ -9,11 +9,10 @@
         <p class="mb-1">
             Do tří pracovních dnů můžete očekávat:
         </p>
-        <ul class="no-bullets">
-            <li>vytvoříme Vám odběrné místo,</li>
+        <ul class="check-list check-list--centered check-list--medium-offset">
+            <li>vytvoříme za vás odběrné místo,</li>
             <li>nabídky pošleme na váš e-mail,</li>
-            <li>z nabídek si stačí vybrat,</li>
-            <li class="mb-3">odběrné místo budete mít v sekci Rozpracované.</li>
+            <li class="mb-3">odběrné místo budete mít<br> v sekci Rozpracované.</li>
         </ul>
         <label [for]="idFileUploader" class="cursor-pointer drop-zone__control btn btn-primary mt-2 mb-4">
             Nahrát fakturu
