--- a/src/assets/scss/02_layout/_main.scss
+++ b/src/assets/scss/02_layout/_main.scss
@@ -259,9 +259,25 @@
 			}
 		}
 
+		&--centered {
+			li {
+				&::before {
+					top: 1px;
+					left: -5px;
+					position: relative;
+				}
+			}
+		}
+
 		&--less-offset {
 			li {
 				padding-bottom: ( $spacer * .25 );
+			}
+		}
+
+		&--medium-offset {
+			li {
+				padding-bottom: ( $spacer * .5 );
 			}
 		}
 	}
