--- a/src/common/ui/card/card.component.html
+++ b/src/common/ui/card/card.component.html
@@ -1,6 +1,7 @@
 <ng-template #content>
    <div class="card__img-holder">
        <img
+           loading="lazy"
            [src]="data.img"
            [attr.title]="data.imgTitle"
            [attr.alt]="data.imgAlt"
