--- a/src/app/pages/consumers/profile/profile.component.html
+++ b/src/app/pages/consumers/profile/profile.component.html
@@ -30,6 +30,28 @@
     </div>
     <div class="row mt-4">
         <div class="col-12 col-xl-6 offset-xl-3 text-center">
+            <h1>
+                Nastavení notifikací
+            </h1>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-xl-7 col-lg-5">
+            <div class="page-box">
+                <pxe-user-notification-form
+                    [formFields]="userNotificationFormFields"
+                    [formLoading]="formLoading"
+                    [formSent]="formNotificationSent"
+                    [formValues]="formValues"
+                    [globalError]="globalError"
+                    [fieldError]="fieldError"
+                    (submitAction)="toggleWatchDog($event)">
+                </pxe-user-notification-form>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-12 col-xl-6 offset-xl-3 text-center">
             <h1>Zrušení uživatelského účtu</h1>
         </div>
     </div>
