--- a/src/common/ui/supply-points-summary/supply-points-summary.component.html
+++ b/src/common/ui/supply-points-summary/supply-points-summary.component.html
@@ -65,7 +65,7 @@
                         Vybrat nového dodavatele
                     </ng-container>
                     <ng-template #moreSupplyPointEndingLinkTemplate>
-                        Seznam uzavřených smluv
+                        <ng-container *ngIf="!concludedPlacesCount">Seznam uzavřených smluv</ng-container>
                     </ng-template>
                 </a>
             </div>
